// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Toggle Controlled 1`] = `
<div>
  <button
    aria-expanded="false"
    class="inline-block py-2 px-4 bg-blue-200 text-blue-900 rounded"
    type="button"
    variant="medium default"
  >
    Close
  </button>
   
  <!---->
</div>
`;

exports[`Storyshots Components|Toggle Default 1`] = `
<div>
  <button
    aria-expanded="false"
    class="inline-block py-2 px-4 bg-blue-200 text-blue-900 rounded"
    type="button"
    variant="medium default"
  >
    Toggle
  </button>
   
  <!---->
</div>
`;
